<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activity Lab</string>
    <string name="menu_settings">Settings</string>
    <string name="onCreate">onCreate() calls:</string>
    <string name="onStart">onStart() calls:</string>
    <string name="onResume">onResume() calls:</string>
    <string name="onPause">onPause() calls:</string>
    <string name="onStop">onStop() calls:</string>
    <string name="onDestroy">onDestroy() calls:</string>
    <string name="onRestart">onRestart() calls:</string>
    <string name="button">Start Activity Two</string>
    <string name="title_activity_activity_two">Activity Two</string>
    <string name="welcome">Welcome to Activity Two (hit the back button to end)</string>
    <string name="close">Close Activity</string>
    <string name="rotateMe">Rotate the device to update the counters</string>
    <string name="createCounter">0</string>
    <string name="startCounter">0</string>
    <string name="resumeCounter">0</string>
    <string name="pauseCounter">0</string>
    <string name="stopCounter">0</string>
    <string name="destroyCounter">0</string>
    <string name="restartCounter">0</string>
    <string name="m_1">Menu Item 1</string>
    <string name="m_2">Menu Item 2</string>

</resources>